<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="@dimen/toolbar_height"
    android:paddingStart="@dimen/toolbar_padding_horizontal"
    android:paddingEnd="@dimen/toolbar_padding_horizontal">

    <ImageView
        android:id="@+id/toolbar_back"
        android:layout_width="@dimen/toolbar_icon_size"
        android:layout_height="@dimen/toolbar_icon_size"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/toolbar_back"
        android:tint="?android:textColorPrimary"
        android:background="?android:selectableItemBackgroundBorderless"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginEnd="@dimen/toolbar_icon_margin"/>

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/toolbar_back"
        android:text="@string/app_name"
        android:textSize="@dimen/toolbar_title_size"
        android:textStyle="bold"
        android:textColor="?android:textColorPrimary"/>

    <ImageView
        android:id="@+id/toolbar_add_note"
        android:layout_width="@dimen/toolbar_icon_size"
        android:layout_height="@dimen/toolbar_icon_size"
        android:layout_toStartOf="@id/toolbar_settings"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/toolbar_icon_margin"
        android:src="@drawable/ic_add_note"
        android:contentDescription="@string/toolbar_add_note"
        android:tint="?android:textColorPrimary"
        android:background="?android:selectableItemBackgroundBorderless"/>

    <ImageView
        android:id="@+id/toolbar_settings"
        android:layout_width="@dimen/toolbar_icon_size"
        android:layout_height="@dimen/toolbar_icon_size"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_settings"
        android:contentDescription="@string/settings_title"
        android:tint="?android:textColorPrimary"
        android:background="?android:selectableItemBackgroundBorderless"/>

</RelativeLayout>
